2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gnome-ui-spec.scm, gnome/gw/Makefile.am: Reverted
	previous name change.

	* gnome/gnome-ui.scm: New file.

2004-05-22  Andy Wingo  <wingo@pobox.com>

	* ChangeLog: Merged all gnome-ui changelogs to here.

2004-05-19  Andy Wingo  <wingo@pobox.com>

	* gtk-checks.ac: New file.

2004-05-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gnome-ui-spec.scm: Moved from libgnomeui-spec.scm.

	* gnome/gw/Makefile.am: Adapted to name change.

2004-04-03  Andreas Rottmann  <a.rottmann@gmx.at>

	* configure.in: Depend on libgnomeui >= 2.6.0 and gtk+ >= 2.4.0.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gw-ui-spec.scm: New file.

	* gnome/gw/gw-gnome-spec.scm: New file.

	* gnome/gw/gw-canvas-spec.scm: New file.

	* gnome/gw/Makefile.am: Add bindings for libgnomecanvas, libgnomeui, and
	libgnome.

2003-12-13  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gw-canvas-spec.scm, gw-ui-spec.scm, gw-canvas-spec.scm: Use
	gw-standard instead of guile-gnome-gw-standard.
	